fix layout on IE 10 & 11

--- a/src/static/styles/laji.css
+++ b/src/static/styles/laji.css
@@ -16,7 +16,7 @@ body {
 }
 
 #content {
-  flex: 1;
+  flex: 1 0 auto;
 }
 
 #footer, #navbar {
